feat: building, base clustering, regtest support for CJs
* chore: make building easier and faster

* feat: ww1cj detection

* feat: consolidation with hops

* feat: map-reduce clustering

* feat: speedups, paper results, regtest

---------

Co-authored-by: Stanislav Boboň <xbobon@fi.muni.cz>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -239,6 +239,7 @@ set(HEURISTICS_HEADERS
   ${BLOCKSCI_HEADER_PREFIX}/heuristics/change_address.hpp
   ${BLOCKSCI_HEADER_PREFIX}/heuristics/taint.hpp
   ${BLOCKSCI_HEADER_PREFIX}/heuristics/tx_identification.hpp
+  ${BLOCKSCI_HEADER_PREFIX}/heuristics/clustering_coinjoin.hpp
 )
 
 set(HEURISTICS_SOURCES
