--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -239,7 +239,6 @@ set(HEURISTICS_HEADERS
   ${BLOCKSCI_HEADER_PREFIX}/heuristics/change_address.hpp
   ${BLOCKSCI_HEADER_PREFIX}/heuristics/taint.hpp
   ${BLOCKSCI_HEADER_PREFIX}/heuristics/tx_identification.hpp
-  ${BLOCKSCI_HEADER_PREFIX}/heuristics/clustering_coinjoin.hpp
 )
 
 set(HEURISTICS_SOURCES
@@ -258,12 +257,14 @@ set(CLUSTER_HEADERS
   ${BLOCKSCI_HEADER_PREFIX}/cluster/cluster_fwd.hpp
   ${BLOCKSCI_HEADER_PREFIX}/cluster/cluster_manager.hpp
   ${BLOCKSCI_HEADER_PREFIX}/cluster/coinjoin_cluster_manager.hpp
+  # ${BLOCKSCI_HEADER_PREFIX}/cluster/coinjoin_clustering_heuristics.hpp
   ${BLOCKSCI_HEADER_PREFIX}/cluster/cluster.hpp
 )
 
 set(CLUSTER_SOURCES
   ${BLOCKSCI_SOURCE_PREFIX}/cluster/cluster_manager.cpp
   ${BLOCKSCI_SOURCE_PREFIX}/cluster/coinjoin_cluster_manager.cpp
+  ${BLOCKSCI_SOURCE_PREFIX}/cluster/coinjoin_clustering_heuristics.cpp
   ${BLOCKSCI_SOURCE_PREFIX}/cluster/cluster.cpp
 )
 
